[gd_scene load_steps=16 format=2]

[ext_resource path="res://mainTitle/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/BlackOpsOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/cursor/cursor.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "intro"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "intro2"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 80 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1276.46, -535.943 ), Vector2( 492.538, 254.27 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "intro3"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel2:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 80, 80 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1384.83, -580.586 ), Vector2( 507.169, 243.414 ) ]
}

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.701961, 0.364706, 0.239216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/intro = SubResource( 1 )
anims/intro2 = SubResource( 3 )
anims/intro3 = SubResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
visible = false
margin_left = 492.538
margin_top = 254.27
margin_right = 566.538
margin_bottom = 302.27
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.576471, 0.262745, 0.317647, 1 )
bbcode_enabled = true
bbcode_text = "[wave]GAME"
text = "GAME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
visible = false
margin_left = 507.169
margin_top = 243.414
margin_right = 581.169
margin_bottom = 291.414
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.576471, 0.262745, 0.317647, 1 )
bbcode_enabled = true
bbcode_text = "[wave]OVER"
text = "OVER"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
visible = false
margin_left = 514.661
margin_top = 30.6541
margin_right = 588.661
margin_bottom = 78.6541
rect_scale = Vector2( 4, 4 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.576471, 0.262745, 0.317647, 1 )
bbcode_enabled = true
bbcode_text = "[wave]OVER"
text = "OVER"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
visible = false
margin_left = 300.754
margin_top = 32.521
margin_right = 374.754
margin_bottom = 80.521
rect_scale = Vector2( 4, 4 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.576471, 0.262745, 0.317647, 1 )
bbcode_enabled = true
bbcode_text = "[wave]GAME"
text = "GAME"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 364.415
margin_top = 171.836
margin_right = 729.415
margin_bottom = 192.836
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.576471, 0.262745, 0.317647, 1 )
text = "SCORE: 1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 212.102
margin_top = 275.206
margin_right = 577.102
margin_bottom = 296.206
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.576471, 0.262745, 0.317647, 1 )
text = "Revenges completed : 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
visible = false
margin_left = -99.0284
margin_top = 357.751
margin_right = 299.971
margin_bottom = 402.751
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.576471, 0.262745, 0.317647, 1 )
text = "You will never exit the 
endless loop of revenge"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = 126.382
margin_top = 518.078
margin_right = 491.382
margin_bottom = 539.078
rect_scale = Vector2( 3, 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.952941, 0.686275, 0.352941, 1 )
text = "CLICK ANYWHERE TO RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 12 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
